--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,11 +1,11 @@
 /* children take full-height  of viewport */
 
-.wrapper {
+/* .wrapper {
     display: flex;
     align-items: stretch
     min-height: 100vh;
 
-}
+} */
 
 /* header */
 
@@ -18,25 +18,25 @@ header {
 }
 
 /* Style the top navigation bar */
-.topnav {
+/* .topnav {
   overflow: hidden;
   background-color: none;
   margin-left: 4vh;
-}
+} */
 
 /* Style the topnav links */
-.topnav a {
+/* .topnav a {
   float: left;
   display: block;
-  color: #0066ff;
+  color: #0066ff; */
   /* text-align: center; */
-  padding: 0px 3px;
+  /* padding: 0px 3px;
   padding-bottom: 10vh;
   text-decoration: none;
-}
+} */
 
 /* Change color on hover */
-.topnav a:hover {
+/* .topnav a:hover {
   background-color: none;
   text-decoration: none;
   color: #E936A7;
@@ -50,10 +50,10 @@ header {
   margin: auto;
   width: 60%;
   padding: 10px;
-}
+} */
 
 /*--- recipe form ---*/
-.recipe-form {
+/* .recipe-form {
   margin-top: 0px;
   padding-top: 0px;
   padding-right: 200px;
@@ -63,4 +63,289 @@ header {
   font-size: 18px;
   text-shadow: 1px 1px 1px #000;
   font-family: 'Oswald', sans-serif;
+} */
+
+
+
+
+
+
+
+
+
+
+@media screen {
+
+  * {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  html, body {
+    height: 100%;
+    width: 100%;
+  }
+
+  /* --- Welcome Page Styles --- */
+  body {
+    background-color: #FFA500;
+    color: #333;
+    font-family: Sans-Serif;
+    line-height: 18px;
+  }
+
+  /* --- login form --- */
+  .login-form {
+    margin-top: 0px;
+    padding-top: 400px;
+    background: transparent;
+    color: white;
+    font-size: 18px;
+    text-shadow: 1px 1px 1px #000;
+    font-family: 'Oswald', sans-serif;
+  }
+
+  .logo-title {
+    font-size: 100px;
+    color: orange;
+    text-shadow: 1px 1px 1px #000;
+    font-family: 'Dynalight'
+  }
+
+  /*--- recipe form ---*/
+  .recipe-form {
+    margin-top: 0px;
+    padding-top: 120px;
+    padding-right: 200px;
+    float: right;
+    background: transparent;
+    color: white;
+    font-size: 21px;
+    text-shadow: 1px 1px 1px #000;
+    font-family: 'Oswald', sans-serif;
+
+  }
+
+  Button {
+  	box-shadow:inset 0px 1px 0px 0px #ffffff;
+  	background:linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
+  	background-color:#ededed;
+  	border-radius:6px;
+  	border:1px solid #dcdcdc;
+  	display:inline-block;
+  	cursor:pointer;
+  	color:#000000 !important;
+  	font-family:Arial;
+  	font-size:12px !important;
+  	font-weight:bold;
+  	padding:6px 24px;
+  	text-decoration:none;
+  	text-shadow:0px 1px 0px #ffffff;
+  }
+  Button:hover {
+  	background:linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
+  	background-color:#dfdfdf;
+  }
+  Button:active {
+  	position:relative;
+  	top:1px;
+  }
+
+
+
+  /*--- recipe show ---*/
+  .recipe-show {
+    margin-top: 0px;
+    padding-top: 75px;
+    padding-left: 300px;
+    float: left;
+    position: absolute;
+    background: transparent;
+    color: white;
+    font-size: 21px;
+    text-shadow: 1px 1px 1px #000;
+    font-family: 'Oswald', sans-serif;
+  }
+    p {
+      font-size: 14px;
+    }
+  }
+
+  /*--- recipe tite ---*/
+  .recipe-title {
+    font-size: 75px;
+    color: orange;
+    text-shadow: 1px 1px 1px #000;
+    font-family: 'Dynalight'
+  }
+
+  /*--- failure page ---*/
+  .failure-link-text {
+    font-size:  18px;
+    color: white;
+    text-decoration: none;
+  }
+
+  /* Style the top navigation bar */
+  .topnav {
+    overflow: hidden;
+    background-color: #333;
+  }
+
+  /* Style the topnav links */
+  .topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+
+  /* Change color on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+
+  #failure-wrapper {
+    width:50%;
+    height:400px;
+    padding-top: 625px;
+    border: 1px;
+    solid: black;
+    position: relative;
+  }
+
+  .failure-button {
+    display: inline-block;
+    border-radius: 4px;
+    background-color: #f4511e;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 28px;
+    padding: 15px;
+    width: 200px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+  }
+
+  .failure-button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+
+  .failure-button span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+  }
+
+  .failure-button:hover span {
+    padding-right: 25px;
+  }
+
+  .failure-button:hover span:after {
+    opacity: 1;
+    right: 0;
+  }
+
+
+  div {
+  	background-repeat: no-repeat;
+  	background-position: center center;
+  	background-size: cover;
+  	background-attachment: fixed;
+  }
+
+  h1 {
+    font-size: 36px;
+    line-height: 54px;
+  }
+
+  h2 {
+    font-size: 24px;
+    line-height: 36px;
+    margin-bottom: 16px;
+  }
+
+  h3 {
+    font-size: 18px;
+    line-height: 36px;
+  }
+
+  p {
+    margin-bottom: 18px;
+  }
+
+  .main {
+    overflow: hidden;
+  }
+
+  .content {
+    float: left;
+    width: 60%; /* 480px / 800px */
+  }
+
+  .sidebar {
+    background: #eee;
+    border: 1px solid #ccc;
+    float: right;
+    padding: 2.08333333333%; /* 5px / 240px */
+    width: 30%; /* 240px / 800px */
+  }
+
+  .sidebar ul {
+    font-size: 14px;
+  }
+
+  .branding {
+    clear: both;
+  }
+
+@media screen and (max-width: 600px) {
+  .wrapper {
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    width: auto;
+  }
+
+  .content, .sidebar {
+    float: none;
+    width: 100%;
+  }
+
+  .sidebar {
+    background: transparent;
+    border: none;
+    border-top: 2px solid #ccc;
+    padding: 0;
+  }
+
+  h1 {
+    font-size: 24px;
+    line-height: 36px;
+  }
+
+  h2 {
+    font-size: 18px;
+    line-height: 24px;
+  }
+}
+
+/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
+@media screen and (max-width: 400px) {
+  .topnav a {
+    float: none;
+    width: 100%;
+  }
 }
